# AudioPlusPlus

./: .gitignore  .gitmodules  AudioPlusPlus.pc.in  AudioPlusPlus.sln  AudioPlusPlus.vcxproj  AudioPlusPlus.vcxproj.filters  CMakeLists.txt  LICENSE  README.md  audio++.pc.in  vcpkg-configuration.json  vcpkg.json
.github/ISSUE_TEMPLATE/: bug_report.md  file-format-request.md
cmake/: AudioPlusPlusConfig.cmake.in  FindFLAC.cmake  FindLame.cmake  FindLibCheck.cmake  FindMpg123.cmake  FindOgg.cmake  FindOpus.cmake  FindVorbis.cmake  Findportaudio.cmake  Findsndfile.cmake  Findspdlog.cmake  Findtaglib.cmake
doc/: doxy.config.in
examples/: CMakeLists.txt  playback.cpp  recording.cpp
examples/Example1/: Example1.vcxproj  main.cpp
examples/Example1/src/: main.cpp
examples/Example2/: main.cpp
include/AudioPlusPlus/: AudioPlusPlus.h  Files.h
include/AudioPlusPlus/Config/: Config.h
include/AudioPlusPlus/Device/: Device.h  DeviceManager.h
include/AudioPlusPlus/Exceptions/: Exception.h
include/AudioPlusPlus/File/: AIFF.h  File.h  MP3.h  ReadFile.h  SndReadFile.h  SndWriteFile.h  Tag.h  WAV.h  WriteFile.h
include/AudioPlusPlus/Log/: Log.h
include/AudioPlusPlus/Player/: Player.h  Stream.h
include/AudioPlusPlus/Recorder/: Recorder.h
include/AudioPlusPlus/Stream/: Stream.h  StreamManager.h
include/AudioPlusPlus/TagHandle/: TagHandle.h
ports/libsndfile/: portfile.cmake  vcpkg.json
ports/mpg123/: portfile.cmake  vcpkg.json
ports/portaudio/: portfile.cmake  vcpkg.json
ports/taglib/: portfile.cmake  vcpkg.json
src/: AudioPlusPlus.cpp  CMakeLists.txt
src/Config/: Config.cpp
src/Device/: Device.cpp  DeviceManager.cpp
src/Exceptions/: Exception.cpp
src/File/: AIFF.cpp  File.cpp  MP3.cpp  ReadFile.cpp  SndReadFile.cpp  SndWriteFile.cpp  Tag.cpp  WAV.cpp  WriteFile.cpp
src/Log/: Log.cpp
src/Player/: Player.cpp  Stream.cpp
src/Recorder/: Recorder.cpp
src/Stream/: Stream.cpp  StreamManager.cpp
src/TagHandle/: TagHandle.cpp
